Fixed issue with overflowing text on small screens

--- a/_sass/_scaffolding.scss
+++ b/_sass/_scaffolding.scss
@@ -85,6 +85,7 @@ article {
     border-bottom: $article-separator-width solid $article-separator-color;
     padding-bottom: 1em;
     margin-bottom: 2em;
+    overflow: hidden;
   }
 
   img {
